Fix whitespace

--- a/resources/css/jquery.dataTables.css
+++ b/resources/css/jquery.dataTables.css
@@ -81,6 +81,7 @@ table.blue-headers th {
 	background-color: #2196f3;
 }
 
+
 /*customized code end*/
 
 table.dataTable thead th,
@@ -181,14 +182,16 @@ table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:
 }
 table.dataTable.order-column tbody tr > .sorting_1,
 table.dataTable.order-column tbody tr > .sorting_2,
-table.dataTable.order-column tbody tr > .sorting_3, table.dataTable.display tbody tr > .sorting_1,
+table.dataTable.order-column tbody tr > .sorting_3, 
+table.dataTable.display tbody tr > .sorting_1,
 table.dataTable.display tbody tr > .sorting_2,
 table.dataTable.display tbody tr > .sorting_3 {
   background-color: #f9f9f9;
 }
 table.dataTable.order-column tbody tr.selected > .sorting_1,
 table.dataTable.order-column tbody tr.selected > .sorting_2,
-table.dataTable.order-column tbody tr.selected > .sorting_3, table.dataTable.display tbody tr.selected > .sorting_1,
+table.dataTable.order-column tbody tr.selected > .sorting_3, 
+table.dataTable.display tbody tr.selected > .sorting_1,
 table.dataTable.display tbody tr.selected > .sorting_2,
 table.dataTable.display tbody tr.selected > .sorting_3 {
   background-color: #acbad4;
@@ -477,3 +480,4 @@ table.dataTable td {
     margin-top: 0.5em;
   }
 }
+
